--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ authors = ["Xavier2p <https://xavier2p.fr>"]
 [dependencies]
 rocket = {version = "=0.5.0-rc.3", features = ["json"]}
 serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
 tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
