--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,5 +1,5 @@
 ---
-name: Publish Package on GitHub Container Registry and Docker Hub
+name: Publish Package on GitHub Container Registry
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   package:
-    name: Publish Package on Registries
+    name: Publish Package
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -45,6 +45,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64 # linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
